--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.24"
+    "@mdi/font": "^7.4.47",
+    "firebase": "^12.7.0",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
+    "pinia": "^2.1.7",
+    "vue": "^3.5.24",
+    "vuetify": "^3.11.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "vite-plugin-pwa": "^1.2.0",
+    "vite-plugin-vuetify": "^2.1.2"
   }
 }
